--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
   <div class="container px-5 py-24 mx-auto flex flex-col">
     <div class="lg:w-4/6 mx-auto">
       <div class="rounded-lg h-94 overflow-hidden">
-        <iframe width="990" height="370" src="https://www.youtube.com/embed/X-TgZ_XpXfQ?si=0zww6pgWkJX0nPPf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-      <!--  <img alt="content" class="object-cover object-center h-full w-full" src="https://dummyimage.com/1200x500">-->
+        
+  <img alt="content" class="object-cover object-center h-full w-full" src="TechChange_logo.png">
       </div>
       <div class="flex flex-col sm:flex-row mt-10">
         <div class="sm:w-1/3 text-center sm:pr-8 sm:py-8">
@@ -119,3 +119,4 @@
 </body>
 
 </html>
+
